src/objects/TMFC_TeamForce_Epic__c.object
<CustomObject>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>TeamForce Epics</relationshipLabel>
        <relationshipName>TeamForce_Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMFC_Data_Requirements__c</fullName>
        <label>Data Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TMFC_Epic_Status__c</fullName>
        <label>Epic Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMFC_Expected_Audience__c</fullName>
        <label>Expected Audience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TMFC_Solution_Business_Objectives__c</fullName>
        <label>Solution Business Objectives</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TMFC_Solution_Technical_Design__c</fullName>
        <label>Solution Technical Design</label>
        <length>12768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TMFC_User_Journey__c</fullName>
        <label>User Journey</label>
        <length>12768</length>
        <type>Html</type>
    </fields>
    <label>TeamForce Epic</label>
    <listViews>
        <fullName>All_open</fullName>
        <columns>NAME</columns>
        <columns>TMFC_Epic_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TMFC_Epic_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>All open</label>
    </listViews>
    <listViews>
        <fullName>Lightning_Sales_MVP_Epics</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Lightning Sales MVP</value>
        </filters>
        <label>Lightning Sales MVP Epics</label>
    </listViews>
    <listViews>
        <fullName>Miguel_s_Epics</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Miguel&apos;s Epics</label>
    </listViews>
    <listViews>
        <fullName>TMFC_All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>TMFC_Epic_Status__c</columns>
        <columns>TMFC_Solution_Business_Objectives__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>TeamForce Epic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TeamForce Epics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>